[gd_scene load_steps=15 format=3 uid="uid://biauwlgys7ce4"]

[ext_resource type="PackedScene" uid="uid://d3nsak46hbo2c" path="res://game/events/common/event.tscn" id="1_geta0"]
[ext_resource type="Script" uid="uid://xyoklife3c7x" path="res://game/events/flag_capture/flag_capture.gd" id="2_xtwto"]
[ext_resource type="PackedScene" uid="uid://ceigdilgx3wae" path="res://game/events/flag_capture/flag_capture_player.tscn" id="3_whopm"]
[ext_resource type="Script" uid="uid://dixx0hylxdvcp" path="res://game/events/flag_capture/flag_capture_ui.gd" id="3_xkawu"]
[ext_resource type="Script" uid="uid://dnjymc8wmp3tm" path="res://game/events/flag_capture/flag_zone.gd" id="5_whopm"]

[sub_resource type="ViewportTexture" id="ViewportTexture_wnvha"]
viewport_path = NodePath("UI/MinimapViewport")

[sub_resource type="Animation" id="Animation_7w56i"]
resource_name = "Draw"
length = 7.0
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1, 4.5, 6.5),
"transitions": PackedFloat32Array(2, 1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(2, 1),
"update": 0,
"values": [Vector2(2, 2), Vector2(1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Winner:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [false]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Team:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("End:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("Draw:visible")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_0668s"]
resource_name = "RESET"
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1e-05, 1e-05)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 0, 0, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Winner:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [true]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Team:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("End:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("Draw:visible")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_gvqew"]
resource_name = "Victory"
length = 7.0
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1, 4.5, 6.5),
"transitions": PackedFloat32Array(2, 1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(2, 1),
"update": 0,
"values": [Vector2(2, 2), Vector2(1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Winner:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [true]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Team:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("End:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("Draw:visible")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_fraxw"]
_data = {
&"Draw": SubResource("Animation_7w56i"),
&"RESET": SubResource("Animation_0668s"),
&"Victory": SubResource("Animation_gvqew")
}

[sub_resource type="Animation" id="Animation_whopm"]
resource_name = "FlagCaptured"
length = 2.5
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5, 2, 2.5),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5, 1, 2, 2.5),
"transitions": PackedFloat32Array(-2, -2, 1, 2, 1),
"update": 0,
"values": [Vector2(1e-05, 1e-05), Vector2(1.5, 1.5), Vector2(1, 1), Vector2(1, 1), Vector2(0, 0)]
}

[sub_resource type="Animation" id="Animation_vg1f0"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1e-05, 1e-05)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ae5hp"]
_data = {
&"FlagCaptured": SubResource("Animation_whopm"),
&"RESET": SubResource("Animation_vg1f0")
}

[sub_resource type="CircleShape2D" id="CircleShape2D_vg1f0"]
radius = 320.0

[node name="Event" instance=ExtResource("1_geta0")]
script = ExtResource("2_xtwto")
match_time = 240
comeback_time = 5
player_scenes = Array[PackedScene]([ExtResource("3_whopm")])

[node name="OtherSpawner" parent="." index="6"]
_spawnable_scenes = PackedStringArray("uid://cc2mkoa1fingr", "uid://cyudg7uces0wb")

[node name="UI" parent="." index="8"]
script = ExtResource("3_xkawu")

[node name="Minimap" parent="UI/Main" index="1"]
texture = SubResource("ViewportTexture_wnvha")

[node name="Timer" type="Label" parent="UI/Main" index="6"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -28.0
offset_top = 8.0
offset_right = 28.0
offset_bottom = 47.0
grow_horizontal = 2
theme_type_variation = &"HeaderLarge"
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_constants/outline_size = 4
text = "3:00"

[node name="Comeback" type="Label" parent="UI/Main" index="7"]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -142.5
offset_top = 79.0
offset_right = 142.5
offset_bottom = 113.0
grow_horizontal = 2
grow_vertical = 2
theme_type_variation = &"HeaderMedium"
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_constants/outline_size = 6
text = "Возвращение через 3..."
horizontal_alignment = 1
vertical_alignment = 1

[node name="RedCount" type="Label" parent="UI/Main" index="8"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -59.5
offset_top = 40.0
offset_right = -4.5
offset_bottom = 107.0
grow_horizontal = 2
theme_override_colors/font_color = Color(1, 0, 0, 1)
theme_override_constants/outline_size = 6
theme_override_font_sizes/font_size = 48
text = "0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="BlueCount" type="Label" parent="UI/Main" index="9"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = 4.5
offset_top = 40.0
offset_right = 59.5
offset_bottom = 107.0
grow_horizontal = 2
theme_override_colors/font_color = Color(0, 0, 1, 1)
theme_override_constants/outline_size = 6
theme_override_font_sizes/font_size = 48
text = "0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="GameEnd" type="HBoxContainer" parent="UI/Main" index="10"]
modulate = Color(1, 0, 0, 0)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -400.0
offset_top = -220.0
offset_right = 400.0
offset_bottom = -100.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(1e-05, 1e-05)
pivot_offset = Vector2(400, 60)
alignment = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="UI/Main/GameEnd" index="0"]
libraries = {
&"": SubResource("AnimationLibrary_fraxw")
}

[node name="Winner" type="Label" parent="UI/Main/GameEnd" index="1"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 0, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 0
theme_override_constants/shadow_offset_y = 3
theme_override_constants/outline_size = 4
theme_override_font_sizes/font_size = 40
text = "ПОБЕДИТЕЛЬ:"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Draw" type="Label" parent="UI/Main/GameEnd" index="2"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 0
theme_override_constants/shadow_offset_y = 3
theme_override_constants/outline_size = 4
theme_override_font_sizes/font_size = 40
text = "НИЧЬЯ!"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Team" type="Label" parent="UI/Main/GameEnd" index="3"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 1, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 0
theme_override_constants/shadow_offset_y = 3
theme_override_constants/outline_size = 4
theme_override_font_sizes/font_size = 40
text = "Синяя"
horizontal_alignment = 1
vertical_alignment = 1

[node name="End" type="Label" parent="UI/Main/GameEnd" index="4"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 0, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 0
theme_override_constants/shadow_offset_y = 3
theme_override_constants/outline_size = 4
theme_override_font_sizes/font_size = 40
text = "команда!"
horizontal_alignment = 1
vertical_alignment = 1

[node name="FlagCaptured" type="HBoxContainer" parent="UI/Main" index="11"]
modulate = Color(1, 1, 1, 0)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -400.0
offset_top = -12.0
offset_right = 400.0
offset_bottom = 108.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(1e-05, 1e-05)
pivot_offset = Vector2(400, 60)
alignment = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="UI/Main/FlagCaptured" index="0"]
libraries = {
&"": SubResource("AnimationLibrary_ae5hp")
}

[node name="Winner" type="Label" parent="UI/Main/FlagCaptured" index="1"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 0
theme_override_constants/shadow_offset_y = 3
theme_override_constants/outline_size = 4
theme_override_font_sizes/font_size = 40
text = "Команда"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Team" type="Label" parent="UI/Main/FlagCaptured" index="2"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 1, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 0
theme_override_constants/shadow_offset_y = 3
theme_override_constants/outline_size = 4
theme_override_font_sizes/font_size = 40
text = "Синих"
horizontal_alignment = 1
vertical_alignment = 1

[node name="End" type="Label" parent="UI/Main/FlagCaptured" index="3"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 0
theme_override_constants/shadow_offset_y = 3
theme_override_constants/outline_size = 4
theme_override_font_sizes/font_size = 40
text = "захватила флаг!"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Title" parent="UI/Intro" index="1"]
text = "ЗАХВАТ ФЛАГА"

[node name="Description" parent="UI/Intro/Title" index="0"]
text = "Принеси флаг противника на свою базу!"

[node name="Text" parent="UI/Intro" index="2"]
text = "Захвати как можно
больше флагов!"

[node name="Music" parent="." index="9"]
volume_db = -3.0

[node name="MatchTimer" type="Timer" parent="." index="12"]

[node name="FlagZoneRed" type="Area2D" parent="." index="13"]
z_index = -4
collision_layer = 128
collision_mask = 32
monitorable = false
script = ExtResource("5_whopm")
area_color = Color(1, 0, 0, 0.25)

[node name="CollisionShape2D" type="CollisionShape2D" parent="FlagZoneRed" index="0"]
shape = SubResource("CircleShape2D_vg1f0")

[node name="FlagZoneBlue" type="Area2D" parent="." index="14"]
z_index = -4
collision_layer = 128
collision_mask = 32
monitorable = false
script = ExtResource("5_whopm")
team = 1
area_color = Color(0, 0, 1, 0.25098)

[node name="CollisionShape2D" type="CollisionShape2D" parent="FlagZoneBlue" index="0"]
shape = SubResource("CircleShape2D_vg1f0")

[connection signal="local_player_created" from="." to="." method="_on_local_player_created"]
[connection signal="timeout" from="MatchTimer" to="." method="_on_match_timer_timeout"]
[connection signal="area_entered" from="FlagZoneRed" to="FlagZoneRed" method="_on_area_entered"]
[connection signal="flag_captured" from="FlagZoneRed" to="." method="_on_flag_zone_red_flag_captured"]
[connection signal="area_entered" from="FlagZoneBlue" to="FlagZoneBlue" method="_on_area_entered"]
[connection signal="flag_captured" from="FlagZoneBlue" to="." method="_on_flag_zone_blue_flag_captured"]
